Fix flicker on page longer than viewport height

--- a/src/assets/scss/partials/_flicker.scss
+++ b/src/assets/scss/partials/_flicker.scss
@@ -14,7 +14,7 @@ body {
   &::after {
     content: " ";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -29,7 +29,7 @@ body {
   &::before{
     content: " ";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
